# MLproject

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  api_spec_medical_study_assistant.md  docker-compose.yml  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements-ml.lock.txt  requirements-ml.txt  requirements-runtime.lock.txt  requirements.txt  Проект ML.md
app/: __init__.py  config.py  constants.py  container.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  qdrant_schema.py  schemas.py
db/: init.sql
evaluation/: .gitignore  Dockerfile  README.md  RESULTS.md  __init__.py  benchmark_lib.py  config.json  docker-compose.yml  prepare_dataset.py  requirements.txt  run_benchmark.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
md/: api_spec.md  description.md  development.md  discription.md  install_macos.md  install_windows.md  start.md  troubleshooting.md  uninstall.md
scripts/: check_postgres.py  create_qdrant_collection.py  download_hf_model.py  download_models.py  migrate.py  smoke_test.py  test_document_repository.py  test_qdrant_search.py  test_vector_repository.py
sql/: 001_create_documents.sql  002_allow_cancelled_jobs.sql  002_upgrade_backend_mvp.sql  003_add_video_sources.sql
tests/: test_answer_service.py  test_chunking_service.py  test_compose_database_config.py  test_embedding_service.py  test_extraction_service.py  test_indexing_cancellation.py  test_openapi.py  test_qdrant_schema.py  (+8 more)
(+52 files in other folders)
